--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
