--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "air-management-system",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
